connected the risk gauges and connected the calculator

--- a/application/package.json
+++ b/application/package.json
@@ -15,7 +15,7 @@
     "axios": "^0.21.1",
     "canvasjs-react-charts": "^1.0.5",
     "esri-leaflet": "^3.0.1",
-    "esri-leaflet-geocoder": "^2.2.13",
+    "esri-leaflet-geocoder": "^2.3.3",
     "leaflet": "^1.4.0",
     "leaflet-control-geocoder": "^2.2.0",
     "leaflet-routing-machine": "^3.2.12",
@@ -23,6 +23,7 @@
     "react": "^17.0.1",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.1",
+    "react-esri-leaflet": "^0.2.2",
     "react-google-charts": "^3.0.15",
     "react-leaflet": "^2.2.1",
     "react-router-dom": "^5.2.0",
