--- a/application/package.json
+++ b/application/package.json
@@ -24,7 +24,9 @@
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.1",
     "react-esri-leaflet": "^0.2.2",
+    "react-geocode": "^0.2.3",
     "react-google-charts": "^3.0.15",
+    "react-google-places-autocomplete": "^3.3.0",
     "react-leaflet": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
